--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                     <td>Proficient</td>
                 </tr>
             </table>  
+            </section>  
 
 
        <section class="gallery">
@@ -106,3 +107,5 @@
   </html>
 
 
+   
+    
